--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,4 +1,4 @@
-name: STRUM BOT 24/7
+name: STRUM AI AGENT 24/7
 
 on:
   workflow_dispatch:
@@ -17,12 +17,14 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Telethon
-        run: pip install telethon
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-      - name: Run Bot
+      - name: Run AI Agent
         env:
           API_ID: ${{ secrets.API_ID }}
           API_HASH: ${{ secrets.API_HASH }}
           TELEGRAM_SESSION: ${{ secrets.TELEGRAM_SESSION }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
         run: python main.py
