--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -34,4 +34,4 @@ jobs:
           TELEGRAM_SESSION: ${{ secrets.TELEGRAM_SESSION }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-        run: python main.py
+        run: python -u main.py
